# ORB_SLAM2_swig

./: .gitignore  CMakeLists.txt  InterfaceTypes.h  MANIFEST.in  README.md  environment.yml  orbslam2.i  setup.py
Examples/Monocular/: mono_kitti.cc  mono_tum.cc
include/: Frame.h  FrameDrawer.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  Map.h  MapDrawer.h  MapPoint.h  ORBmatcher.h  Optimizer.h  PnPsolver.h  Sim3Solver.h  System.h  Tracking.h  Viewer.h  VocabularyBuilder.h
src/: Frame.cc  FrameDrawer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  MapPoint.cc  ORBmatcher.cc  Optimizer.cc  PnPsolver.cc  Sim3Solver.cc  System.cc  Tracking.cc  Viewer.cc  VocabularyBuilder.cc
tests/src/: TestSystem.cpp
